--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
 
     <!--[if lt IE 7]>
-        <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+        <div class="page browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</div>
     <![endif]-->
 
     <div class="page {{ pageClass }}" ng-view></div>
