--- a/tpl/about.html
+++ b/tpl/about.html
@@ -1,1 +1,7 @@
-<h1>About</h1>
+<header>A propos</header>
+
+<div class="content">
+    <p>
+        Les CGU (fakes) & des Q&A par exemple
+    </p>
+</div>
