--- a/tpl/home.html
+++ b/tpl/home.html
@@ -1,1 +1,36 @@
-<h1>Home</h1>
+<header>Accueil</header>
+<div class="content">
+
+    
+    <div class="grid">
+
+        <div class="col-3 col-2-m col-1-s">
+            <div class="card">
+                <div class="card-header">card-header</div>
+                <div class="card-line card-hoverable">card-line card-hoverable</div>
+                <div class="card-divider">card-divider</div>
+                <div class="card-line">card-line</div>
+            </div>
+        </div>
+
+        <div class="col-3 col-2-m col-1-s">
+            <div class="card">
+                <div class="card-header">header</div>
+                <div class="card-line">content</div>
+                <div class="card-divider">separator</div>
+                <div class="card-line card-disabled">footer</div>
+            </div>
+        </div>
+
+        <div class="col-3 col-1-m">
+            <div class="card">
+                <div class="card-header">header</div>
+                <div class="card-line">content</div>
+                <div class="card-divider card-disabled">separator</div>
+                <div class="card-line">footer</div>
+            </div>
+        </div>
+
+    </div>
+
+</div>
