just a little things before bed ;)

--- a/tpl/home.html
+++ b/tpl/home.html
@@ -10,26 +10,45 @@
                 <div class="card-line card-hoverable">card-line card-hoverable</div>
                 <div class="card-divider">card-divider</div>
                 <div class="card-line">card-line</div>
+                <div class="card-line card-disabled">card-line card-disabled</div>
             </div>
         </div>
 
         <div class="col-3 col-2-m col-1-s">
             <div class="card">
-                <div class="card-header">header</div>
-                <div class="card-line">content</div>
-                <div class="card-divider">separator</div>
-                <div class="card-line card-disabled">footer</div>
+                <div class="card-header">Lorem ipsum</div>
+                <div class="card-line">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum cumque praesentium consectetur. Architecto ipsa ex esse aperiam veritatis iusto assumenda, maiores nihil omnis perferendis, saepe eum laboriosam. Nemo, illum placeat.</p>
+                    <p>Laudantium, quis officiis eum, assumenda tempore molestias praesentium culpa quas magni tenetur ex cumque ullam illum ea. Eaque voluptates a molestiae quasi, illo, amet quaerat modi placeat nisi repellat consequuntur.</p>
+                </div>
             </div>
         </div>
 
         <div class="col-3 col-1-m">
             <div class="card">
-                <div class="card-header">header</div>
-                <div class="card-line">content</div>
-                <div class="card-divider card-disabled">separator</div>
-                <div class="card-line">footer</div>
+                <div class="card-line">
+                    card-line
+                </div>
+                <div class="card-divider">
+                    card-divider
+                </div>
             </div>
         </div>
+
+        <!--
+        <div class="col-3 col-2-m col-1-s">
+            <div class="card">
+                <div class="card-header">card-header</div>
+                <div class="card-line card-hoverable">card-line card-hoverable</div>
+                <div class="card-divider">card-divider</div>
+                <div class="card-line">card-line</div>
+                <div class="card-line card-disabled">card-line card-disabled</div>
+            </div>
+        </div>
+        -->
+
+
+
 
     </div>
 
