--- a/tpl/cart.html
+++ b/tpl/cart.html
@@ -1,4 +1,4 @@
-<header>Liste de courses</header>
+<header>Ma Liste de courses</header>
 <div class="content">
     <p>
         La liste et les actions
