--- a/tpl/home.html
+++ b/tpl/home.html
@@ -1,36 +1,54 @@
-<header>Accueil</header>
+<header>Ma poubelle</header>
 <div class="content">
 
     
     <div class="grid">
 
-        <div class="col-3 col-2-m col-1-s">
+        <div class="col-1-2 col-1-2-m col-1-1-s">
             <div class="card">
-                <div class="card-header">card-header</div>
-                <div class="card-line card-hoverable">card-line card-hoverable</div>
-                <div class="card-divider">card-divider</div>
-                <div class="card-line">card-line</div>
-                <div class="card-line card-disabled">card-line card-disabled</div>
-            </div>
-        </div>
-
-        <div class="col-3 col-2-m col-1-s">
-            <div class="card">
-                <div class="card-header">Lorem ipsum</div>
+                <div class="card-header">-12kg de déchets!</div>
+                <div class="card-line card-img">
+                    <img src="img/recyclage_bravo.png" alt="Bravo">
+                </div>
                 <div class="card-line">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum cumque praesentium consectetur. Architecto ipsa ex esse aperiam veritatis iusto assumenda, maiores nihil omnis perferendis, saepe eum laboriosam. Nemo, illum placeat.</p>
-                    <p>Laudantium, quis officiis eum, assumenda tempore molestias praesentium culpa quas magni tenetur ex cumque ullam illum ea. Eaque voluptates a molestiae quasi, illo, amet quaerat modi placeat nisi repellat consequuntur.</p>
+                    <p>Bravo! Vous avez réduit vos déchets de 12kg entre février et mars, c'est un bon score...</p>
+                </div>
+                <div class="card-line card-divider card-hoverable" ng-click="alert('not implemented')">
+                    Partager
                 </div>
             </div>
         </div>
 
-        <div class="col-3 col-1-m">
+        <div class="col-1-2 col-1-2-m col-1-1-s">
             <div class="card">
-                <div class="card-line">
-                    card-line
+                <div class="card-header">Ajoutés récemment</div>
+                <div class="card-line" ng-repeat="item in [{name: 'Chocolat'},{name: 'Whisky'}]">
+                    {{item.name}}
                 </div>
-                <div class="card-divider">
-                    card-divider
+                <a class="card-line card-divider card-hoverable" href="#!/cart">
+                    Voir la liste complete...
+                </a>
+            </div>
+        </div>
+
+        <div class="col-1-1">
+            <div class="card">
+                <div class="card-header">
+                    Statistiques
+                </div>
+                <div class="card-line"></div>
+
+            </div>
+        </div>
+
+        <div class="col-1-2 push-1-4 col-1-2-m push-1-4-m col-1-1-s push-0-s">
+            <div class="card">
+                <div class="card-header">Votre premier vélo!</div>
+                <div class="card-line">
+                    <p>Les 32 kg de métal qque vous avez recyclés pourraient permettre de produire un vélo. C'est chouet!</p>
+                </div>
+                <div class="card-line card-divider card-hoverable" ng-click="alert('not implemented')">
+                    Partager
                 </div>
             </div>
         </div>
@@ -39,9 +57,9 @@
         <div class="col-3 col-2-m col-1-s">
             <div class="card">
                 <div class="card-header">card-header</div>
+                <div class="card-line">card-line</div>
                 <div class="card-line card-hoverable">card-line card-hoverable</div>
                 <div class="card-divider">card-divider</div>
-                <div class="card-line">card-line</div>
                 <div class="card-line card-disabled">card-line card-disabled</div>
             </div>
         </div>
