--- a/tpl/cart.html
+++ b/tpl/cart.html
@@ -1,6 +1,17 @@
 <header>Ma Liste de courses</header>
 <div class="content">
-    <p>
-        La liste et les actions
-    </p>
+    <div class="grid">
+        <div class="col-1-1">
+            <div class="card">
+                <div class="card-header">Ajoutés récemment</div>
+                <div class="card-line" ng-repeat="item in shoppingList.list">
+                    <input type="checkbox" ng-model="item.checked">
+                    {{ item.title }}
+                    <small>
+                        {{ item.code }}
+                    </small>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
