--- a/tpl/home.html
+++ b/tpl/home.html
@@ -22,7 +22,7 @@
         <div class="col-1-3 col-1-2-m col-1-1-s">
             <div class="card">
                 <div class="card-header">Ajoutés récemment</div>
-                <div class="card-line" ng-repeat="item in shoppingList.list">
+                <div class="card-line" ng-repeat="item in shoppingList.list | limitTo: 3">
                     <input type="checkbox" ng-model="item.checked">
                     {{ item.title }}
                     <small>
