--- a/tpl/about.html
+++ b/tpl/about.html
@@ -1,7 +1,21 @@
 <header>A propos</header>
 
 <div class="content">
-    <p>
-        Les CGU (fakes) & des Q&A par exemple
-    </p>
+    <div class="grid">
+        <div class="col-1-3">
+            <div class="card">
+                <div class="card-line">cgu</div>
+            </div>
+        </div>
+        <div class="col-1-3">
+            <div class="card">
+                <div class="card-line">q&a</div>
+            </div>
+        </div>
+        <div class="col-1-3">
+            <div class="card">
+                <div class="card-line">app</div>
+            </div>
+        </div>
+    </div>
 </div>
