--- a/tpl/cart.html
+++ b/tpl/cart.html
@@ -1,6 +1,8 @@
 <header>Ma Liste de courses</header>
 <div class="content">
+
     <div class="grid">
+
         <div class="col-1-2 push-1-4 col-2-3-m push-1-6-m col-1-1-s push-0-s">
             <div class="card">
                 <div class="card-header">Liste de courses</div>
@@ -20,5 +22,10 @@
                 </div>
             </div>
         </div>
+
     </div>
+
+    <a ng-click="addToCartModal()" class="materialCircleButton"></a>
+
+
 </div>
