--- a/tpl/home.html
+++ b/tpl/home.html
@@ -13,7 +13,7 @@
                 <div class="card-line">
                     <p>Bravo! Vous avez réduit vos déchets de 12kg entre février et mars, c'est un bon score...</p>
                 </div>
-                <div class="card-line card-divider card-hoverable" ng-click="alert('not implemented')">
+                <div class="card-line card-cta" ng-click="alert('not implemented')">
                     Partager
                 </div>
             </div>
@@ -31,7 +31,7 @@
                         </small>
                     </div>
                 </div>
-                <a class="card-line card-divider card-hoverable" href="#!/cart">
+                <a class="card-line card-cta" href="#!/cart">
                     Voir la liste complete...
                 </a>
             </div>
@@ -43,7 +43,7 @@
                 <div class="card-line">
                     <p>Les 32 kg de métal qque vous avez recyclés pourraient permettre de produire un vélo. C'est chouet!</p>
                 </div>
-                <div class="card-line card-divider card-hoverable" ng-click="alert('not implemented')">
+                <div class="card-line card-cta" ng-click="alert('not implemented')">
                     Partager
                 </div>
             </div>
