cart actions ok & some other stuff

--- a/tpl/addToCartDialog.html
+++ b/tpl/addToCartDialog.html
@@ -1,14 +1,14 @@
 <div class="card" ng-init="product= {}">
     <div class="card-header">Ajouter un article</div>
     <div class="card-line input-group">
-        <label for="product-name">Nom du produit</label>
-        <input type="text" id="product-name" ng-model="product.name" placeholder="Mon produit...">
+        <label for="product-title">Nom du produit</label>
+        <input type="text" id="product-title" ng-model="product.title" placeholder="Mon produit..." ng-enter="save(product)">
     </div>
     <div class="card-line input-group">
         <label for="product-code">Code barre</label>
-        <input type="text" id="product-code" ng-model="product.code" placeholder="xxxxxxxxxxxxx">
+        <input type="text" id="product-code" ng-model="product.code" placeholder="xxxxxxxxxxxxx" ng-enter="save(product)">
     </div>
-    <a class="card-cta">
+    <a class="card-cta" ng-click="save(product)">
         Ajouter
     </a>
 </div>
