better hover concept on cart deletion icon & not implemented popup

--- a/tpl/home.html
+++ b/tpl/home.html
@@ -13,7 +13,7 @@
                 <div class="card-line">
                     <p>Bravo! Vous avez réduit vos déchets de 12kg entre février et mars, c'est un bon score...</p>
                 </div>
-                <div class="card-line card-cta" ng-click="alert('not implemented')">
+                <div class="card-line card-cta" ng-not-implemented>
                     Partager
                 </div>
             </div>
@@ -43,7 +43,7 @@
                 <div class="card-line">
                     <p>Les 32 kg de métal qque vous avez recyclés pourraient permettre de produire un vélo. C'est chouet!</p>
                 </div>
-                <div class="card-line card-cta" ng-click="alert('not implemented')">
+                <div class="card-line card-cta" ng-not-implemented>
                     Partager
                 </div>
             </div>
