--- a/tpl/about.html
+++ b/tpl/about.html
@@ -2,19 +2,42 @@
 
 <div class="content">
     <div class="grid">
-        <div class="col-1-3">
+        <div class="col-1-1">
             <div class="card">
-                <div class="card-line">cgu</div>
+                <div class="card-line card-header">A propos</div>
+                <div class="card-line">
+                    <h3>Projet</h3>
+                    <p>Projet réalisé dans le cadre des entrepreneuriales 2015-2016.</p>
+                    <p>Une application mobile reprenant le même fonctionnement est disponible pour les smartphones android et téléchargeable ici :</p>
+                </div>
+                <a class="card-line card-cta" ng-not-implemented>Application Android</a>
             </div>
         </div>
-        <div class="col-1-3">
+        <div class="col-1-1">
             <div class="card">
-                <div class="card-line">q&a</div>
+                <div class="card-line card-header">Questions - Réponses</div>
+                <div class="card-line">
+                    <h3>Quand sortira ce produit?</h3>
+                    <p>Nous ne nous projetons pas encore pour une sortie cette année mais pourrions lancer le produit et la solution dès l'année prochaine, qui sait ...</p>
+                </div>
+                <div class="card-line">
+                    <h3>Puis-je utiliser cette application ou ce site pour ma liste de courses personnelle ?</h3>
+                    <p>Non, en l'état tout personne connectée partage la même base de donnée. Votre liste serait donc visible et modifiable par n'importe qui.</p>
+                </div>
+                <div class="card-line">
+                    <h3>Pourquoi ne pas avoir fait d'application pour iOs?</h3>
+                    <p>L'application est développée, mais nous n'avons pas les fonds nécessaires pour la proposer sur le store d'apple. L'application android n'est d'ailleurs pas non plus sur le store de Google, mais les téléphones android permettent l'installation d'applications à partir de sources extérieures.</p>
+                </div>
             </div>
         </div>
-        <div class="col-1-3">
+        <div class="col-1-1">
             <div class="card">
-                <div class="card-line">app</div>
+                <div class="card-line card-header">CGU</div>
+                <div class="card-line">
+                    <h3> !! DEMONSTRATION !! </h3>
+                    <p>Ce dashboard est déployé à des fins de démonstration et aucunement à des fins professionnelles ou lucratives</p>
+                    <p class="text-center"><b><i>GreenTi. copyright 2015-2016</i></b></p>
+                </div>
             </div>
         </div>
     </div>
