app download link

--- a/tpl/about.html
+++ b/tpl/about.html
@@ -10,7 +10,7 @@
                     <p>Projet réalisé dans le cadre des entrepreneuriales 2015-2016.</p>
                     <p>Une application mobile reprenant le même fonctionnement est disponible pour les smartphones android et téléchargeable ici :</p>
                 </div>
-                <a class="card-line card-cta" ng-not-implemented>Application Android</a>
+                <a class="card-line card-cta" download href="https://github.com/greenTi/greenti-app/raw/master/platforms/android/build/outputs/apk/android-debug.apk">Application Android</a>
             </div>
         </div>
         <div class="col-1-1">
