--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
     <link rel="stylesheet" href="dist/css/styles.css">
+    <!-- Chrome, Firefox OS, Opera and Vivaldi -->
+    <meta name="theme-color" content="#7fb300">
+    <!-- Windows Phone -->
+    <meta name="msapplication-navbutton-color" content="#7fb300">
+    <!-- iOS Safari -->
+    <meta name="apple-mobile-web-app-status-bar-style" content="#7fb300">
 </head>
 <body>
 
