--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <meta name="msapplication-navbutton-color" content="#7fb300">
     <!-- iOS Safari -->
     <meta name="apple-mobile-web-app-status-bar-style" content="#7fb300">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 </head>
 <body>
 
