added team to about page

--- a/tpl/about.html
+++ b/tpl/about.html
@@ -2,6 +2,7 @@
 
 <div class="content">
     <div class="grid">
+
         <div class="col-1-1">
             <div class="card">
                 <div class="card-line card-header">A propos</div>
@@ -13,6 +14,43 @@
                 <a class="card-line card-cta" download href="https://github.com/greenTi/greenti-app/raw/master/platforms/android/build/outputs/apk/android-debug.apk">Application Android</a>
             </div>
         </div>
+
+        <div class="col-1-1">
+            <div class="card">
+                <div class="card-line card-header">L'équipe</div>
+                <div class="card-line card-avatar">
+                    <img src="http://greenti.bzh/user/themes/greenTi/images/joel.jpg" alt="">
+                    <h2>Joel</h2>
+                    <p>Electronicien</p>
+                </div>
+                <a class="card-line card-avatar card-hoverable" href="http://caradeuc.info">
+                    <img src="http://greenti.bzh/user/themes/greenTi/images/benjamin.jpg" alt="">
+                    <h2>Benjamin <i class="fa fa-link"></i> </h2>
+                    <p>Développeur site web & app mobile</p>
+                </a>
+                <div class="card-line card-avatar">
+                    <img src="http://greenti.bzh/user/themes/greenTi/images/maxime.jpg" alt="">
+                    <h2>Maxime</h2>
+                    <p>Développeur back-end</p>
+                </div>
+                <div class="card-line card-avatar">
+                    <img src="http://greenti.bzh/user/themes/greenTi/images/annegaelle.jpg" alt="">
+                    <h2>Anne-Gaelle</h2>
+                    <p>Juriste</p>
+                </div>
+                <div class="card-line card-avatar">
+                    <img src="http://greenti.bzh/user/themes/greenTi/images/arnaud.jpg" alt="">
+                    <h2>Arnaud</h2>
+                    <p>Gestionaire en économies</p>
+                </div>
+                <div class="card-line card-avatar">
+                    <img src="http://greenti.bzh/user/themes/greenTi/images/edruina.jpg" alt="">
+                    <h2>Edruina</h2>
+                    <p>Chargée de recrutement</p>
+                </div>
+            </div>
+        </div>
+
         <div class="col-1-1">
             <div class="card">
                 <div class="card-line card-header">Questions - Réponses</div>
@@ -30,6 +68,7 @@
                 </div>
             </div>
         </div>
+
         <div class="col-1-1">
             <div class="card">
                 <div class="card-line card-header">CGU</div>
@@ -40,5 +79,6 @@
                 </div>
             </div>
         </div>
+
     </div>
 </div>
