--- a/tpl/home.html
+++ b/tpl/home.html
@@ -41,7 +41,7 @@
             <div class="card">
                 <div class="card-header">Votre premier vélo!</div>
                 <div class="card-line">
-                    <p>Les 32 kg de métal qque vous avez recyclés pourraient permettre de produire un vélo. C'est chouet!</p>
+                    <p>Les 32 kg de métal que vous avez recyclés pourraient permettre de produire un vélo. C'est génial!</p>
                 </div>
                 <div class="card-line card-cta" ng-not-implemented>
                     Partager
